--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,28 +3,29 @@ body {
 		padding: 0;
 		margin:0;
 		background-color: #F2F2F2;
-	}
-	nav {
+}
 
-	background-color: #0c3456;
+nav {
+
+background-color: #0c3456;
 		height:43px;
 		color:#999;
-	}
-	nav h2{
-		padding: 5px;
-		margin-left: 200px;
-		margin: 0;
-	}
-	input {
-		padding:5px 10px 5px 10px;
-		font-size:1em;
-border:solid 1px #ccc;
-margin:0 0 5px;
-width:200px;
--webkit-border-radius: 3px; 
--moz-border-radius: 3px; 
-border-radius: 3px;
-	}
+}
+nav h2{
+	padding: 5px;
+	margin-left: 200px;
+	margin: 0;
+}
+input {
+	padding:5px 10px 5px 10px;
+	font-size:1em;
+    border:solid 1px #ccc;
+    margin:0 0 5px;
+    width:200px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
 
 	
 #contain {
@@ -145,3 +146,80 @@ border-radius: 3px;
 	text-decoration: none;
 	color: #666;
 }
+
+
+.button {
+	display: inline-block;
+	width: 120px;
+	height: 16px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 14px;
+	line-height: 14px;
+	outline: none;
+}
+.button::before,
+.button::after {
+	position: absolute;
+	z-index: -1;
+	display: block;
+	content: '';
+}
+.button,
+.button::before,
+.button::after {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-transition: all .3s;
+	transition: all .3s;
+}
+
+.button {
+	position: relative;
+	background-color: #1abc9c;
+	border-radius: 4px;
+	color: #fff;
+	line-height: 18px;
+	-webkit-transition: none;
+	transition: none;
+	box-shadow: 0 3px 0 #0e8c73;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
+}
+.button:hover {
+	background-color: #31c8aa;
+	box-shadow: 0 3px 0 #23a188;
+}
+.button:active {
+	top: 3px;
+	box-shadow: none;
+}
+
+
+
+#create_room {}
+
+#create_room .button {
+	display: inline-block;
+	width: 120px;
+	height: 16px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 14px;
+	line-height: 14px;
+	outline: none;
+	background-color: #1a96c2;
+	box-shadow: 0 3px 0 #49c5f0;
+}
+#create_room  .button:hover {
+	background-color: #1a88c2;
+	box-shadow: 0 3px 0 #49c0f0;
+}
+#create_room  .button:active {
+	top: 3px;
+	box-shadow: none;
+}
+
+
+
+
